html-js tarjeta

--- a/html-js/index.html
+++ b/html-js/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
@@ -15,11 +16,18 @@
   <button id="boton">Cick me!</button> -->
 <!-- ----------------------------------->
 
-<input id="input" type="text" placeholder="Ingresa tu nombre">
+  <input id="nombre" type="text" placeholder="Ingresa tu nombre">
+  <input id="email" type="text" placeholder="Email">
+  <input id="pizza" type="text" placeholder="pizza c/pinhia">
+  <button id="boton">click</button>
 
-<h2 id="mostrar"></h2>
+  <div class="tarjeta">
 
-<button id="boton">Cambiar</button>
+    <h1 id="mostrarNombre">hola</h1>
+    <h2 id="mostrarEmail">Ya no hay sandwich</h2>
+    <h3 id="mostrarPizza"> 😔 </h3>
+
+  </div>
 
 
   <script src="main.js"></script>
