html-js tarjeta

--- a/html-js/index.html
+++ b/html-js/index.html
@@ -21,11 +21,11 @@
   <input id="pizza" type="text" placeholder="pizza c/pinhia">
   <button id="boton">click</button>
 
-  <div class="tarjeta">
+  <div id="tarjeta" class="tarjeta invisible">
 
-    <h1 id="mostrarNombre">hola</h1>
-    <h2 id="mostrarEmail">Ya no hay sandwich</h2>
-    <h3 id="mostrarPizza"> 😔 </h3>
+    <h1 id="mostrarNombre"></h1>
+    <h2 id="mostrarEmail"></h2>
+    <h3 id="mostrarPizza"></h3>
 
   </div>
 
